test: add some sample test cases (#8801)
* test: add sample case

* test: add sample proactive message case

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -159,7 +159,7 @@ jobs:
           lscpu
 
       - name: Download samples(daily)
-        if: ${{ github.event_name == 'schedule' && startsWith(matrix.cases, './samples/') }}
+        if: github.event_name == 'schedule' && startsWith(matrix.cases, './samples/') && contains(matrix.cases, 'ProactiveMessage') == false
         uses: actions/checkout@v3
         with:
           repository: OfficeDev/TeamsFx-Samples
@@ -167,11 +167,19 @@ jobs:
           path: packages/cli/tests/e2e/resource
 
       - name: Download samples(rc)
-        if: ${{ github.event_name == 'workflow_dispatch' && startsWith(matrix.cases, './samples/') }}
+        if: github.event_name == 'workflow_dispatch' && startsWith(matrix.cases, './samples/') && contains(matrix.cases, 'ProactiveMessage') == false
         uses: actions/checkout@v3
         with:
           repository: OfficeDev/TeamsFx-Samples
           ref: v3
+          path: packages/cli/tests/e2e/resource
+      
+      - name: Download samples from another repo
+        if: startsWith(matrix.cases, './samples/') && contains(matrix.cases, 'ProactiveMessage')
+        uses: actions/checkout@v3
+        with:
+          repository: OfficeDev/Microsoft-Teams-Samples
+          ref: main
           path: packages/cli/tests/e2e/resource
 
       - name: run test
