fix: rollback launch.json

--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -16,9 +16,7 @@
         "${workspaceFolder}/../api/build/**/*.js"
       ],
       "env": {
-        "NODE_ENV": "development",
-        "TEAMSFX_V3": "true",
-        "TEAMSFX_DEBUG_TEMPLATE": "true"
+        "NODE_ENV": "development"
       },
       "preLaunchTask": "npm: build"
     },
