--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -142,7 +142,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.CD_PAT }}
 
-      - name: release templates' prerelease version to github
+      - name: release templates' beta version to github
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && github.event.inputs.preid == 'beta' }}
         uses: ncipollo/release-action@v1.10.0
         with:
@@ -304,25 +304,25 @@ jobs:
           artifactErrorsFailBuild: true
           bodyFile: ./CHANGELOG.md
 
-      - name: Calculate Version Num
-        id: preview-version
+      - name: Calculate beta version number
+        id: beta-version
         working-directory: packages/vscode-extension
         run: |
           DATE_WITH_TIME=`date "+%Y%m%d%H"`
-          PRERELEASE_VERSION=4.99
+          PRERELEASE_VERSION=$(jq -r .version package.json | cut -c1-3)
           TTK_VERSION=$PRERELEASE_VERSION.$DATE_WITH_TIME
           echo "version=$TTK_VERSION" >> $GITHUB_OUTPUT
           echo $TTK_VERSION
 
-      - name: set vsc version for prerelease
+      - name: set vsc version for beta
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && github.event.inputs.preid == 'beta' }}
         uses: jossef/action-set-json-field@v1
         with:
           file: ./packages/vscode-extension/package.json
           field: version
-          value: ${{ steps.preview-version.outputs.version }}
+          value: ${{ steps.beta-version.outputs.version }}
 
-      - name: pack vsix for preview
+      - name: pack vsix for beta
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && github.event.inputs.preid == 'beta' }}
         env:
           RELEASE: preview
@@ -338,7 +338,7 @@ jobs:
             touch test.vsix
             rm *.vsix
             npm install --only=production
-            npx vsce package --pre-release ${{ steps.preview-version.outputs.version }}
+            npx vsce package --pre-release ${{ steps.beta-version.outputs.version }}
 
       - name: save release info
         run: |
