ci: remove prerlease branch checker

--- a/.github/workflows/cd_trigger.yml
+++ b/.github/workflows/cd_trigger.yml
@@ -3,7 +3,7 @@ name: TeamsFx-CD Triggers
 on:
   workflow_run:
     workflows: ["CD"]
-    branches: ["main", "dev", "hotfix/**", "prerelease"]
+    branches: ["main", "dev", "hotfix/**"]
     types: ["completed"]
 
 jobs:
