--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -61,7 +61,7 @@
   },
   "dependencies": {
     "@azure/core-auth": "^1.4.0",
-    "@microsoft/teams-manifest": "^0.0.10",
+    "@microsoft/teams-manifest": "^0.1.0-alpha",
     "axios": "^0.21.2",
     "chai": "^4.3.4",
     "jsonschema": "^1.4.0",
