--- a/packages/manifest/package.json
+++ b/packages/manifest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teams-manifest",
-  "version": "0.1.0-alpha",
+  "version": "0.0.10",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "MIT",
