--- a/.github/workflows/graph-toolkit-released.yml
+++ b/.github/workflows/graph-toolkit-released.yml
@@ -1,7 +1,7 @@
 name: Botbuilder New Version Released
 on:
   schedule:
-    cron: "0 0 * * *"
+    - cron: "0 0 * * *"
   workflow-dispatch:
 
 jobs:
