--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -1,43 +1,64 @@
-name: SDK Dependency Auto Upgrade
+name: Botbuilder New Version Released
 on:
-  # schedule:
-  #   # The "*" (#42, asterisk) character has special semantics in YAML, so this
-  #   # string has to be quoted.
-  #   - cron: '0 * * * *'
+  schedule:
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
-permissions: read-all
-
 jobs:
-  renovate:
+  notification:
     runs-on: ubuntu-latest
     steps:
-      - name: Get TeamsFx Renovate App Token
-        id: teamsfx-renovate
-        uses: getsentry/action-github-app-token@v2
-        with:
-          app_id: ${{ secrets.RENOVATE_APP_ID }}
-          private_key: ${{ secrets.RENOVATE_PRIVATE_KEY }}
-
-      - name: Checkout
-        uses: actions/checkout@v3
-      
       - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: 14
-          
-      - name: Setup project
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 10
-          max_attempts: 10
-          retry_on: error
-          command: |
-            npm run setup
 
-      # - name: Self-hosted Renovate
-      #   uses: renovatebot/github-action@v36.0.0
+      - name: Check LTS Version
+        id: checkLTSVersion
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const axios = require("axios");
+            const response = await axios.get("https://registry.npmjs.org/botbuilder");
+            const ltsVersion = response.data["dist-tags"].latest;
+            const ltsVersionTime = response.data.time[ltsVersion];
+            const timeDiff = (new Date() - new Date(ltsVersionTime)) / 1000;
+            if (timeDiff <= 86400) {
+              return ltsVersion;
+            } else {
+              return "";
+            }
+
+      - name: Get Release Detail
+        if: ${{steps.checkLTSVersion.outputs.result != ""}}
+        id: detail
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const responseBody = "<p>Botbuilder v" + "${{ steps.checkLTSVersion.outputs.result }} has been released.\n Details can be found here: https://github.com/microsoft/botbuilder-js/releases";
+            return responseBody;
+
+      - name: Setup Email and Recipient
+        if: ${{steps.checkLTSVersion.outputs.result != ""}}
+        id: email
+        run: |
+          emails="vsciotadt@microsoft.com;junjieli@microsoft.com;zhshang@microsoft.com;donji@microsoft.com;zhany@microsoft.com"
+          subject="Bot Framework JS SDK ${{ steps.checkLTSVersion.outputs.result }} Released"
+
+          echo "to=$emails" >> $GITHUB_OUTPUT
+          echo "subject=$subject" >> $GITHUB_OUTPUT
+
+      - name: Send E-mail Notifications
+        # uses: satak/webrequest-action@master
+        run: echo ${{steps.checkLTSVersion.outputs.result}}
+
       #   with:
-      #     token: 'x-access-token:${{ steps.teamsfx-renovate.outputs.token }}'
-      #     configurationFile: renovate.json
+      #     url: https://prod-30.eastus.logic.azure.com:443/workflows/9aa865da96054bd89749c2d4ce68df8e/triggers/manual/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=uIoB06NUHSnKoZeWjNDI9t4rrhbTBKxJNiBtDoMRSQs
+      #     method: POST
+      #     payload: |
+      #       {
+      #         "to": "${{ steps.email.outputs.to }}",
+      #         "body": ${{ steps.detail.outputs.result }},
+      #         "subject": "${{ steps.email.outputs.subject }}",
+      #         "apiKey": "${{ secrets.MAIL_API_KEY }}"
+      #       }
