--- a/.github/workflows/graph-toolkit-released.yml
+++ b/.github/workflows/graph-toolkit-released.yml
@@ -1,9 +1,7 @@
-name: Botbuilder New Version Released
+name: Microsoft Graph Toolkit New Version Released
 on:
-  schedule:
-    - cron: "0 0 * * *"
-  workflow-dispatch:
-
+  repository_dispatch:
+    types: [graph-toolkit-released]
 jobs:
   notification:
     runs-on: ubuntu-latest
@@ -13,52 +11,29 @@ jobs:
         with:
           node-version: 14
 
-      - name: Check LTS Version
-        id: checkLTSVersion
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const axios = require("axios");
-            const response = await axios.get("https://registry.npmjs.org/botbuilder");
-            const ltsVersion = response.data["dist-tags"].latest;
-            const ltsVersionTime = response.data.time[ltsVersion];
-            const timeDiff = (new Date() - new Date(ltsVersionTime)) / 1000;
-            if (timeDiff <= 86400) {
-              return ltsVersion;
-            } else {
-              return "";
-            }
-
       - name: Get Release Detail
-        if: ${{steps.checkLTSVersion.outputs.result != ""}}
         id: detail
         uses: actions/github-script@v6
         with:
           script: |
-            const responseBody = "<p>Botbuilder v" + "${{ steps.checkLTSVersion.outputs.result }} has been released.\n Details can be found here: https://github.com/microsoft/botbuilder-js/releases";
+            const responseBody = "<p>Microsoft Graph Toolkit v" + "${{ github.event.client_payload.version }} has been released.\n Details can be found here: https://github.com/microsoftgraph/microsoft-graph-toolkit/releases/tag/v${{ github.event.client_payload.version }}";
             return responseBody;
-
       - name: Setup Email and Recipient
-        if: ${{steps.checkLTSVersion.outputs.result != ""}}
         id: email
         run: |
           emails="vsciotadt@microsoft.com;junjieli@microsoft.com;zhshang@microsoft.com;donji@microsoft.com;zhany@microsoft.com"
-          subject="Bot Framework JS SDK ${{ steps.checkLTSVersion.outputs.result }} Released"
-
+          subject="Microsoft Graph Toolkit v${{ github.event.client_payload.version }} Released"
           echo "to=$emails" >> $GITHUB_OUTPUT
           echo "subject=$subject" >> $GITHUB_OUTPUT
-
       - name: Send E-mail Notifications
-        # uses: satak/webrequest-action@master
-        run: echo ${{steps.checkLTSVersion.outputs.result}}
-
-      #   with:
-      #     url: https://prod-30.eastus.logic.azure.com:443/workflows/9aa865da96054bd89749c2d4ce68df8e/triggers/manual/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=uIoB06NUHSnKoZeWjNDI9t4rrhbTBKxJNiBtDoMRSQs
-      #     method: POST
-      #     payload: |
-      #       {
-      #         "to": "${{ steps.email.outputs.to }}",
-      #         "body": ${{ steps.detail.outputs.result }},
-      #         "subject": "${{ steps.email.outputs.subject }}",
-      #         "apiKey": "${{ secrets.MAIL_API_KEY }}"
-      #       }
+        uses: satak/webrequest-action@master
+        with:
+          url: https://prod-30.eastus.logic.azure.com:443/workflows/9aa865da96054bd89749c2d4ce68df8e/triggers/manual/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=uIoB06NUHSnKoZeWjNDI9t4rrhbTBKxJNiBtDoMRSQs
+          method: POST
+          payload: |
+            {
+              "to": "${{ steps.email.outputs.to }}",
+              "body": ${{ steps.detail.outputs.result }},
+              "subject": "${{ steps.email.outputs.subject }}",
+              "apiKey": "${{ secrets.MAIL_API_KEY }}"
+            }
