fix: update workflow

--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -30,11 +30,11 @@ jobs:
             if (timeDiff <= 86400) {
               return ltsVersion;
             } else {
-              return '';
+              return null;
             }
 
       - name: Get Release Detail
-        if: ${{steps.checkLTSVersion.outputs.result != ''}}
+        if: ${{steps.checkLTSVersion.outputs.result != null}}
         id: detail
         uses: actions/github-script@v6
         with:
@@ -43,7 +43,7 @@ jobs:
             return responseBody;
 
       - name: Setup Email and Recipient
-        if: ${{steps.checkLTSVersion.outputs.result != ''}}
+        if: ${{steps.checkLTSVersion.outputs.result != null}}
         id: email
         run: |
           emails="vsciotadt@microsoft.com;junjieli@microsoft.com;zhshang@microsoft.com;donji@microsoft.com;zhany@microsoft.com"
