--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -17,44 +17,50 @@ jobs:
         run: |
           npm install axios
 
-      - name: Check LTS Version
-        id: checkLTSVersion
+      - name: Get LTS Version
+        id: getLTSVersion
         uses: actions/github-script@v6
         with:
           script: |
             const axios = require("axios");
             const response = await axios.get("https://registry.npmjs.org/botbuilder");
-            const ltsVersion = response.data["dist-tags"].latest;
-            const ltsVersionTime = response.data.time[ltsVersion];
+            return response.data["dist-tags"].latest;
+
+      - name: Check for New Version
+        id: checkNewVersion
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const ltsVersionTime = response.data.time[${{ steps.getLTSVersion.outputs.result }}];
             const timeDiff = (new Date() - new Date(ltsVersionTime)) / 1000;
             if (timeDiff <= 86400) {
-              return ltsVersion;
+              return true;
             } else {
-              return 'NaN';
+              return false;
             }
 
       - name: Get Release Detail
-        if: ${{steps.checkLTSVersion.outputs.result != 'NaN'}}
+        if: ${{steps.checkNewVersion.outputs.result == 'true'}}
         id: detail
         uses: actions/github-script@v6
         with:
           script: |
-            const responseBody = "<p>Botbuilder v" + "${{ steps.checkLTSVersion.outputs.result }} has been released.\n Details can be found here: https://github.com/microsoft/botbuilder-js/releases";
+            const responseBody = "<p>Botbuilder v" + "${{ steps.getLTSVersion.outputs.result }} has been released.\n Details can be found here: https://github.com/microsoft/botbuilder-js/releases";
             return responseBody;
 
       - name: Setup Email and Recipient
-        if: ${{steps.checkLTSVersion.outputs.result != 'NaN'}}
+        if: ${{steps.checkNewVersion.outputs.result == 'true'}}
         id: email
         run: |
           emails="vsciotadt@microsoft.com;junjieli@microsoft.com;zhshang@microsoft.com;donji@microsoft.com;zhany@microsoft.com"
-          subject="Bot Framework JS SDK ${{ steps.checkLTSVersion.outputs.result }} Released"
+          subject="Bot Framework JS SDK ${{ steps.getLTSVersion.outputs.result }} Released"
 
           echo "to=$emails" >> $GITHUB_OUTPUT
           echo "subject=$subject" >> $GITHUB_OUTPUT
 
       - name: Send E-mail Notifications
         # uses: satak/webrequest-action@master
-        run: echo ${{steps.checkLTSVersion.outputs.result}}
+        run: echo ${{steps.getLTSVersion.outputs.result}}
 
       #   with:
       #     url: https://prod-30.eastus.logic.azure.com:443/workflows/9aa865da96054bd89749c2d4ce68df8e/triggers/manual/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=uIoB06NUHSnKoZeWjNDI9t4rrhbTBKxJNiBtDoMRSQs
