--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -24,36 +24,30 @@ jobs:
           script: |
             const axios = require("axios");
             const response = await axios.get("https://registry.npmjs.org/botbuilder");
-            return response.data["dist-tags"].latest;
-
-      - name: Check for New Version
-        id: checkNewVersion
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const ltsVersionTime = response.data.time[${{ steps.getLTSVersion.outputs.result }}];
+            cont ltsVersion = response.data["dist-tags"].latest;
+            const ltsVersionTime = response.data.time[ltsVersion];
             const timeDiff = (new Date() - new Date(ltsVersionTime)) / 1000;
             if (timeDiff <= 86400) {
-              return true;
+              return true, 'ltsVersion';
             } else {
               return false;
             }
 
       - name: Get Release Detail
-        if: ${{steps.checkNewVersion.outputs.result == 'true'}}
+        if: ${{steps.getLTSVersion.outputs.result[0] == 'true'}}
         id: detail
         uses: actions/github-script@v6
         with:
           script: |
-            const responseBody = "<p>Botbuilder v" + "${{ steps.getLTSVersion.outputs.result }} has been released.\n Details can be found here: https://github.com/microsoft/botbuilder-js/releases";
+            const responseBody = "<p>Botbuilder v" + "${{ steps.getLTSVersion.outputs.result[1] }} has been released.\n Details can be found here: https://github.com/microsoft/botbuilder-js/releases";
             return responseBody;
 
       - name: Setup Email and Recipient
-        if: ${{steps.checkNewVersion.outputs.result == 'true'}}
+        if: ${{steps.getLTSVersion.outputs.result[0] == 'true'}}
         id: email
         run: |
           emails="vsciotadt@microsoft.com;junjieli@microsoft.com;zhshang@microsoft.com;donji@microsoft.com;zhany@microsoft.com"
-          subject="Bot Framework JS SDK ${{ steps.getLTSVersion.outputs.result }} Released"
+          subject="Bot Framework JS SDK ${{ steps.getLTSVersion.outputs.result[1] }} Released"
 
           echo "to=$emails" >> $GITHUB_OUTPUT
           echo "subject=$subject" >> $GITHUB_OUTPUT
