fix: update workflow

--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -39,7 +39,7 @@ jobs:
             }
 
       - name: Get Release Detail
-        if: ${{steps.getLTSVersion.outputs.result.hasNewVersion == 'true'}}
+        if: ${{steps.getLTSVersion.outputs.result.hasNewVersion}}
         id: detail
         uses: actions/github-script@v6
         with:
@@ -48,7 +48,7 @@ jobs:
             return responseBody;
 
       - name: Setup Email and Recipient
-        if: ${{steps.getLTSVersion.outputs.result.hasNewVersion == 'true'}}
+        if: ${{steps.getLTSVersion.outputs.result.hasNewVersion}}
         id: email
         run: |
           emails="yiqingzhao@microsoft.com"
@@ -58,7 +58,7 @@ jobs:
           echo "subject=$subject" >> $GITHUB_OUTPUT
 
       - name: Send E-mail Notifications
-        if: ${{steps.getLTSVersion.outputs.result.hasNewVersion == 'true'}}
+        if: ${{steps.getLTSVersion.outputs.result.hasNewVersion}}
         uses: satak/webrequest-action@master
         with:
           url: https://prod-30.eastus.logic.azure.com:443/workflows/9aa865da96054bd89749c2d4ce68df8e/triggers/manual/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=uIoB06NUHSnKoZeWjNDI9t4rrhbTBKxJNiBtDoMRSQs
