fix: update workflow

--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -28,37 +28,32 @@ jobs:
             const ltsVersionTime = response.data.time[ltsVersion];
             const timeDiff = (new Date() - new Date(ltsVersionTime)) / 1000;
             if (timeDiff >= 86400) {
-              return {
-                "hasNewVersion": true,
-                "version": ltsVersion
-              };
+              return 'v' + ltsVersion;
             } else {
-              return {
-                "hasNewVersion": false
-              };
+              return '';
             }
 
       - name: Get Release Detail
-        if: ${{steps.getLTSVersion.outputs.result.hasNewVersion}}
+        if: startsWith(${{steps.getLTSVersion.outputs.result}}, 'v')
         id: detail
         uses: actions/github-script@v6
         with:
           script: |
-            const responseBody = "<p>Botbuilder v" + "${{ steps.getLTSVersion.outputs.result.version }} has been released.\n Details can be found here: https://github.com/microsoft/botbuilder-js/releases<p>";
+            const responseBody = "<p>Botbuilder " + "${{steps.getLTSVersion.outputs.result}} has been released.\n Details can be found here: https://github.com/microsoft/botbuilder-js/releases<p>";
             return responseBody;
 
       - name: Setup Email and Recipient
-        if: ${{steps.getLTSVersion.outputs.result.hasNewVersion}}
+        if: startsWith(${{steps.getLTSVersion.outputs.result}}, 'v')
         id: email
         run: |
           emails="yiqingzhao@microsoft.com"
-          subject="Bot Framework JS SDK ${{ steps.getLTSVersion.outputs.result.version }} Released"
+          subject="Bot Framework JS SDK ${{steps.getLTSVersion.outputs.result}} Released"
 
           echo "to=$emails" >> $GITHUB_OUTPUT
           echo "subject=$subject" >> $GITHUB_OUTPUT
 
       - name: Send E-mail Notifications
-        if: ${{steps.getLTSVersion.outputs.result.hasNewVersion}}
+        if: startsWith(${{steps.getLTSVersion.outputs.result}}, 'v')
         uses: satak/webrequest-action@master
         with:
           url: https://prod-30.eastus.logic.azure.com:443/workflows/9aa865da96054bd89749c2d4ce68df8e/triggers/manual/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=uIoB06NUHSnKoZeWjNDI9t4rrhbTBKxJNiBtDoMRSQs
