--- a/packages/manifest/package.json
+++ b/packages/manifest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teams-manifest",
-  "version": "0.1.0-rc.0",
+  "version": "0.1.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "MIT",
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.3-rc.0",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.3",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^8.2.3",
