--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -1,60 +1,43 @@
-name: Botbuilder New Version Released
+name: SDK Dependency Auto Upgrade
 on:
-  schedule:
-    - cron: "0 0 * * *"
+  # schedule:
+  #   # The "*" (#42, asterisk) character has special semantics in YAML, so this
+  #   # string has to be quoted.
+  #   - cron: '0 * * * *'
   workflow_dispatch:
 
+permissions: read-all
+
 jobs:
-  notification:
+  renovate:
     runs-on: ubuntu-latest
     steps:
+      - name: Get TeamsFx Renovate App Token
+        id: teamsfx-renovate
+        uses: getsentry/action-github-app-token@v2
+        with:
+          app_id: ${{ secrets.RENOVATE_APP_ID }}
+          private_key: ${{ secrets.RENOVATE_PRIVATE_KEY }}
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: 14
 
-      - name: Install npm packages
-        run: |
-          npm install axios
-
-      - name: Get LTS Version
-        id: getLTSVersion
-        uses: actions/github-script@v6
+      - name: Setup project
+        uses: nick-invision/retry@v2
         with:
-          script: |
-            const axios = require("axios");
-            const response = await axios.get("https://registry.npmjs.org/botbuilder");
-            const ltsVersion = response.data["dist-tags"].latest;
-            const ltsVersionTime = response.data.time[ltsVersion];
-            const timeDiff = (new Date() - new Date(ltsVersionTime)) / 1000;
-            if (timeDiff <= 86400) {
-              return 'v' + ltsVersion;
-            } else {
-              return '';
-            }
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          command: |
+            npm run setup
 
-      - name: Setup Email and Recipient
-        if: ${{ contains(steps.getLTSVersion.outputs.result, 'v') }}
-        id: email
-        run: |
-          emails="vsciotadt@microsoft.com;zhididr@microsoft.com;johmil@microsoft.com"
-          subject="Bot Framework JS SDK ${{steps.getLTSVersion.outputs.result}} Released"
-          body="Botbuilder ${{steps.getLTSVersion.outputs.result}} has been released.\n Details can be found here: https://github.com/microsoft/botbuilder-js/releases"
-
-          echo "to=$emails" >> $GITHUB_OUTPUT
-          echo "subject=$subject" >> $GITHUB_OUTPUT
-          echo "body=$body" >> $GITHUB_OUTPUT
-
-      - name: Send E-mail Notifications
-        if: ${{ contains(steps.getLTSVersion.outputs.result, 'v') }}
-        uses: satak/webrequest-action@master
-        with:
-          url: https://prod-30.eastus.logic.azure.com:443/workflows/9aa865da96054bd89749c2d4ce68df8e/triggers/manual/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=uIoB06NUHSnKoZeWjNDI9t4rrhbTBKxJNiBtDoMRSQs
-          method: POST
-          payload: |
-            {
-              "to": "${{ steps.email.outputs.to }}",
-              "body": "${{ steps.email.outputs.body }}",
-              "subject": "${{ steps.email.outputs.subject }}",
-              "apiKey": "${{ secrets.MAIL_API_KEY }}"
-            }
+      # - name: Self-hosted Renovate
+      #   uses: renovatebot/github-action@v36.0.0
+      #   with:
+      #     token: 'x-access-token:${{ steps.teamsfx-renovate.outputs.token }}'
+      #     configurationFile: renovate.json
