--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -130,6 +130,7 @@
     "@types/adm-zip": "^0.4.33",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
+    "@types/chai-spies": "^1.0.3",
     "@types/cryptr": "^4.0.1",
     "@types/detect-port": "^1.3.2",
     "@types/faker": "^5.5.0",
@@ -162,6 +163,7 @@
     "ahocorasick": "^1.0.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "chai-spies": "^1.0.0",
     "copy-webpack-plugin": "^6.4.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
