--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -1245,7 +1245,7 @@
     "@commitlint/config-conventional": "^12.0.1",
     "@fluentui/react": "^8.5.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@microsoft/eslint-plugin-teamsfx": "^0.0.3-rc",
+    "@microsoft/eslint-plugin-teamsfx": "^0.0.3",
     "@types/adm-zip": "^0.4.33",
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.3",
@@ -1336,8 +1336,8 @@
     "@microsoft/dev-tunnels-contracts": "~1.0.7360",
     "@microsoft/dev-tunnels-management": "~1.0.7360",
     "@microsoft/dev-tunnels-ssh": "~3.11.1",
-    "@microsoft/teamsfx-api": "^0.22.3-rc",
-    "@microsoft/teamsfx-core": "^2.0.1-rc",
+    "@microsoft/teamsfx-api": "^0.22.3",
+    "@microsoft/teamsfx-core": "^2.0.1",
     "@npmcli/package-json": "^1.0.1",
     "@vscode/extension-telemetry": "^0.6.2",
     "@vscode/webview-ui-toolkit": "^0.9.3",
