--- a/packages/api2teams/package.json
+++ b/packages/api2teams/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/api2teams",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.1",
   "description": "openapi spec to teams app",
   "main": "index.js",
   "author": "Microsoft Corporation",
@@ -53,5 +53,8 @@
     "typescript": "^4.9.5",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
